--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <table class="zakus">
                 <caption>Закуски</caption>
                 <tr><td>Сырная тарелка................................................250гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
-                <tr><td>Креветки к пиву в кисло-сладком соу//....370гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Моцарелла, пармезан, дор-лю)</td></tr>
+                <tr><td>Креветки к пиву в кисло-сладком соусе....370гр./<strong>450р.</strong></td></tr>
+                <tr><td class="opis"></td></tr>
                 <tr><td>Овощная тарелка..............................................230гр./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Помидоры, свежие огурцы, салат, болгарский перец, зелень)</td></tr>
                 <tr><td>Мясная тарелка.................................................300гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Буженина, куриный рулет, говядина европейская)</td></tr>
                 <tr><td>Название...............................................................300гр/<strong>цена.</strong></td></tr>
                 <tr><td class="opis">(Баварские колбаски, чесночные гренки, сыр косичка)</td></tr>
             </table>
@@ -45,48 +45,48 @@
             <br>
             <table>
                 <caption>Пиццы</caption>
-                <tr><td>Маргарита........................................................400гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
-                <tr><td>Пеперони.........................................................400гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
-                <tr><td>Четыре сыра....................................................400гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td>Маргарита..........................................................400гр./<strong>300р.</strong></td></tr>
+                <tr><td class="opis">(Соус, свежие томаты, сыр моцарелла, прованские травы)</td></tr>
+                <tr><td>Пеперони............................................................400гр./<strong>370р.</strong></td></tr>
+                <tr><td class="opis">(Соус, салями, помидоры, болгарский перец, моцарелла)</td></tr>
+                <tr><td>Четыре сыра.....................................................400гр./<strong>450р.</strong></td></tr>
+                <tr><td class="opis">(Соус, сыр чеддер, пармезан, моцарелла, дор-лю,<br> провансике травы)</td></tr>
                 <tr><td>Четыре сезона..................................................400гр./<strong>400р.</strong></td></tr>
+                <tr><td class="opis">(Грибы, помидоры, салями, курица, моцарелла, соус)</td></tr>
+                <tr><td>Гавайская............................................................400гр./<strong>370р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
-                <tr><td>Пеперони.........................................................400гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
-                <tr><td>?........................................................................400гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">(бекон, шампиньоны, сыр)</td></tr>
+                <tr><td>Карбонара..........................................................400гр./<strong>370р.</strong></td></tr>
+                <tr><td class="opis">(Бекон, шампиньоны, моцарелла, соус)</td></tr>
             </table>
             <br>
             <table class="salat">
                 <caption>Салаты</caption>
                 <tr><td>Цезарь с курицей..............................................250гр./<strong>320р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Микс салата романо и айсберг, соус цезарь, куриное филе, <br> помидоры черри, сухарики, перепелиные яйца, пармезан )</td></tr>
                 <tr><td>Цезарь с креветкой...........................................250гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Микс салата романо и айсберг, соус цезарь, <br> королевские креветки, помидоры черри, сухарики, <br> перепелиные яйца, пармезан)</td></tr>
                 <tr><td>Греческий..........................................................200гр./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Свежие огурцы, помидоры, болгарский перец, маслины, <br>сыр фета, бальзамический уксус, сок лайма, <br> прованские травы, оливковое масло)</td></tr>
                 <tr><td>С морепродуктами............................................200гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Мясо мидии, кольца кальмара, королевские креветки,<br> соус маракуйя, помидоры черри, салат айсберг)</td></tr>
             </table>
             <br>
             <table >
                 <caption>Пасты</caption>
                 <tr><td>Карбонара...........................................................300гр./<strong>320р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Бекон, сливки, пармезан, помидоры черри)</td></tr>
                 <tr><td>Болоньезе............................................................300гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis"></td></tr>
                 <tr><td>С курицей и грибами.........................................300гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Куринное филе, лук, шампиньоны, сливки, сыр, базилик)</td></tr>
                 <tr><td>С морепродуктами.............................................300гр./<strong>400р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Креветки королевские, мидии, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр)</td></tr>
             </table>
             <br>
             <table>
                 <caption>Супы</caption>
                 <tr><td>Том-Ям...............................................................300гр./<strong>400р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td class="opis">(Кольца кальмара, мидии в створках, королевские креветки,<br> морской гребешок, филе дорадо, лимонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи)</td></tr>
                 <tr><td>Грибной..............................................................300гр./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
                 <tr><td>Чечевичный.......................................................300гр./<strong>250р.</strong></td></tr>
@@ -113,10 +113,10 @@
                 <caption>Гарниры</caption>
                 <tr><td>Шампиньоны гриль.................................................?гр./<strong>?р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
-                <tr><td>Овощи гриль............................................................?гр./<strong>?р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
-                <tr><td>Рис с овощами..........................................................?гр./<strong>?р.</strong></td></tr>
-                <tr><td class="opis">состав</td></tr>
+                <tr><td>Овощи гриль....................................................150гр./<strong>150р.</strong></td></tr>
+                <tr><td class="opis">(Кабачок, баклажан, цветная капуста, лук, <br>балгарский перец)</td></tr>
+                <tr><td>Рис с овощами................................................150гр./<strong>100р.</strong></td></tr>
+                <tr><td class="opis">(Рис, цукини, болгарский перец, лук)</td></tr>
             </table>
             <br>
             <h2>Карта бара</h2>
