--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Chemistry Lounge Bar</title>
         <link rel="stylesheet" href="main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@300;400&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -17,7 +17,7 @@
                 <caption>Закуски</caption>
                 <tr><td>Сырная тарелка................................................250гр./<strong>450р.</strong></td></tr>
                 <tr><td class="opis">(Моцарелла, пармезан, дор-лю)</td></tr>
-                <tr><td>Креветки к пиву в кисло-сладком соусе....370гр./<strong>450р.</strong></td></tr>
+                <tr><td>Креветки к пиву в кисло-сладком соус....370гр./<strong>450р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
                 <tr><td>Овощная тарелка..............................................230гр./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Помидоры, свежие огурцы, салат, болгарский перец, зелень)</td></tr>
@@ -39,7 +39,7 @@
                 <caption>Бургеры</caption>
                 <tr><td>2 бургера...........................................................400гр./<strong>410р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
-                <tr><td>Угольный эксперемент....................................400гр./<strong>400р.</strong></td></tr>
+                <tr><td>Угольный эксперемент...............................400гр./<strong>400р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
             </table>
             <br>
@@ -77,9 +77,9 @@
                 <tr><td class="opis">(Бекон, сливки, пармезан, помидоры черри)</td></tr>
                 <tr><td>Болоньезе............................................................300гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
-                <tr><td>С курицей и грибами.........................................300гр./<strong>300р.</strong></td></tr>
+                <tr><td>С курицей и грибами........................................300гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">(Куринное филе, лук, шампиньоны, сливки, сыр, базилик)</td></tr>
-                <tr><td>С морепродуктами.............................................300гр./<strong>400р.</strong></td></tr>
+                <tr><td>С морепродуктами............................................300гр./<strong>400р.</strong></td></tr>
                 <tr><td class="opis">(Креветки королевские, мидии, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр)</td></tr>
             </table>
             <br>
@@ -135,26 +135,26 @@
                 <tr><td class="opis">(Апельсиновый сок, сироп маракуя, содовая,<br>сок лайма, сок лимона, апельсин, мята, лед)</td></tr>
                 <tr><td>Каогуляция.......................................................250мл/<strong>300р.</strong></td></tr>
                 <tr><td class="opis">(Сироп клубника, апельсиновый сок, <br>ананасовый сок, кофе эспрессо)</td></tr>
-                <tr><td>Феррум............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Феррум..............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Виноградный сок, сироп сахар, лайм, содовая, лед)</td></tr>
                 <tr><td>Витамин А.......................................................250мл./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">(Апельсиновый сок, мороженное, вишневый сок,<br>содовая, лед)</td></tr>
                 <tr><td>Витамин С.......................................................250мл./<strong>300р.</strong></td></tr>
                 <tr><td class="opis">(Сироп малина, мороженное, грейп сок, <br>взбитые сливки, содовая)</td></tr>
-                <tr><td>Фолиевая кислота...........................................250мл./<strong>200р.</strong></td></tr>
+                <tr><td>Фолиевая кислота........................................250мл./<strong>200р.</strong></td></tr>
                 <tr><td class="opis">(Спрайт, лайм, мята, сироп сахар, лед)</td></tr>
                 
             </table>
             <br>
             <table>
                 <caption>Смузи</caption>
-                <tr><td>Иммунитет......................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Иммунитет.......................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Анансовый сок, апельсиновый сок, клубника,<br>ежевика, малина, черника, мята, сок лимона,<br>сироп гранат)</td></tr>
-                <tr><td>Марганец........................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Марганец.........................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Яблочный сок, клубника, банан, лед)</td></tr>
                 <tr><td>Вульфенит.......................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Грейпфрут, мята, мед, лед)</td></tr>
-                <tr><td>Малахит..........................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Малахит...........................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Персиковый сок, киви, сахар пудра, корица)</td></tr>
                 <tr><td >Александрид..................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Малина, груша, яблоко, молоко, мед)</td></tr>
@@ -164,15 +164,15 @@
                 <caption>Милкшейки</caption>
                 <tr><td>Вольфрам.......................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Мороженное, молоко, печенье, смородина, <br> сахар сироп, какао мята, корица палочкой,<br>взбитые сливки)</td></tr>
-                <tr><td>Калий.............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Калий...............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Мороженное, молоко, сироп блюкюрасао, <br>сироп гранат, банан, малина, мармелад,<br>взбитые сливки)</td></tr>
-                <tr><td>Бром...............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Бром.................................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Клубника, молоко, банан, сироп малина)</td></tr>
                 <tr><td>Цирконий.......................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Молоко, мороженное, сироп карамель, киви, банан)</td></tr>
-                <tr><td>Олово.............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Олово...............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Мороженное, молоко, орех сироп, орео, какао)</td></tr>
-                <tr><td>Родий..............................................................250мл./<strong>250р.</strong></td></tr>
+                <tr><td>Родий...............................................................250мл./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Мороженное, молоко, ежевика, взбитые сливки)</td></tr>
             </table>
         </main>
