--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <title>Chemistry Lounge Bar</title>
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@300;400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&family=Playfair+Display&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>Chemistry Lounge Bar</h1>
+            <h1><a class="yellow">CHEMISTRY</a></h1>
+            <h1>Lounge Bar</h1>
             <h2>Меню</h2>
         </header>
         <main>
@@ -17,13 +19,13 @@
                 <caption>Закуски</caption>
                 <tr><td>Сырная тарелка................................................250гр./<strong>450р.</strong></td></tr>
                 <tr><td class="opis">(Моцарелла, пармезан, дор-лю)</td></tr>
-                <tr><td>Креветки к пиву в кисло-сладком соус....370гр./<strong>450р.</strong></td></tr>
+                <tr><td>Креветки к пиву в кисло-сладком соус.......370гр./<strong>450р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
                 <tr><td>Овощная тарелка..............................................230гр./<strong>250р.</strong></td></tr>
                 <tr><td class="opis">(Помидоры, свежие огурцы, салат, болгарский перец, зелень)</td></tr>
                 <tr><td>Мясная тарелка.................................................300гр./<strong>370р.</strong></td></tr>
                 <tr><td class="opis">(Буженина, куриный рулет, говядина европейская)</td></tr>
-                <tr><td>Название...............................................................300гр/<strong>цена.</strong></td></tr>
+                <tr><td>Название.............................................................300гр/<strong>цена.</strong></td></tr>
                 <tr><td class="opis">(Баварские колбаски, чесночные гренки, сыр косичка)</td></tr>
             </table>
             <br>
