--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header>
             <h1><a class="yellow">CHEMISTRY</a></h1>
             <h1>Lounge Bar</h1>
+            <img src="img/logo.jpg">
             <h2>Меню</h2>
         </header>
         <main>
