--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <table class="zakus">
                 <caption>Закуски</caption>
                 <tr><td>Сырная тарелка................................................250гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">(Моцарелла, пармезан, дор-лю)</td></tr>
-                <tr><td>Креветки к пиву в кисло-сладком соус.......370гр./<strong>450р.</strong></td></tr>
+                <tr><td class="opis">Моцарелла, пармезан, дор-лю</td></tr>
+                <tr class="left"><td>Креветки к пиву в кисло-сладком соус.......370гр./<strong>450р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
                 <tr><td>Овощная тарелка..............................................230гр./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Помидоры, свежие огурцы, салат, болгарский перец, зелень)</td></tr>
+                <tr><td class="opis">Помидоры, свежие огурцы, салат, болгарский перец, зелень</td></tr>
                 <tr><td>Мясная тарелка.................................................300гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">(Буженина, куриный рулет, говядина европейская)</td></tr>
+                <tr><td class="opis">Буженина, куриный рулет, говядина европейская</td></tr>
                 <tr><td>Название.............................................................300гр/<strong>цена.</strong></td></tr>
-                <tr><td class="opis">(Баварские колбаски, чесночные гренки, сыр косичка)</td></tr>
+                <tr><td class="opis">Баварские колбаски, чесночные гренки, сыр косичка</td></tr>
             </table>
             <br>
             <table>
@@ -48,47 +48,47 @@
             <table>
                 <caption>Пиццы</caption>
                 <tr><td>Маргарита..........................................................400гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">(Соус, свежие томаты, сыр моцарелла, прованские травы)</td></tr>
+                <tr><td class="opis">Соус, свежие томаты, сыр моцарелла, прованские травы</td></tr>
                 <tr><td>Пеперони............................................................400гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">(Соус, салями, помидоры, болгарский перец, моцарелла)</td></tr>
+                <tr><td class="opis">Соус, салями, помидоры, болгарский перец, моцарелла</td></tr>
                 <tr><td>Четыре сыра.....................................................400гр./<strong>450р.</strong></td></tr>
-                <tr><td class="opis">(Соус, сыр чеддер, пармезан, моцарелла, дор-лю,<br> провансике травы)</td></tr>
+                <tr><td class="opis">Соус, сыр чеддер, пармезан, моцарелла, дор-лю,<br> провансике травы</td></tr>
                 <tr><td>Четыре сезона..................................................400гр./<strong>400р.</strong></td></tr>
-                <tr><td class="opis">(Грибы, помидоры, салями, курица, моцарелла, соус)</td></tr>
+                <tr><td class="opis">Грибы, помидоры, салями, курица, моцарелла, соус</td></tr>
                 <tr><td>Гавайская............................................................400гр./<strong>370р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
                 <tr><td>Карбонара..........................................................400гр./<strong>370р.</strong></td></tr>
-                <tr><td class="opis">(Бекон, шампиньоны, моцарелла, соус)</td></tr>
+                <tr><td class="opis">Бекон, шампиньоны, моцарелла, соус</td></tr>
             </table>
             <br>
             <table class="salat">
                 <caption>Салаты</caption>
                 <tr><td>Цезарь с курицей..............................................250гр./<strong>320р.</strong></td></tr>
-                <tr><td class="opis">(Микс салата романо и айсберг, соус цезарь, куриное филе, <br> помидоры черри, сухарики, перепелиные яйца, пармезан )</td></tr>
+                <tr><td class="opis">Микс салата романо и айсберг, соус цезарь, куриное филе, <br> помидоры черри, сухарики, перепелиные яйца, пармезан</td></tr>
                 <tr><td>Цезарь с креветкой...........................................250гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">(Микс салата романо и айсберг, соус цезарь, <br> королевские креветки, помидоры черри, сухарики, <br> перепелиные яйца, пармезан)</td></tr>
+                <tr><td class="opis">Микс салата романо и айсберг, соус цезарь, <br> королевские креветки, помидоры черри, сухарики, <br> перепелиные яйца, пармезан</td></tr>
                 <tr><td>Греческий..........................................................200гр./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Свежие огурцы, помидоры, болгарский перец, маслины, <br>сыр фета, бальзамический уксус, сок лайма, <br> прованские травы, оливковое масло)</td></tr>
+                <tr><td class="opis">Свежие огурцы, помидоры, болгарский перец, маслины, <br>сыр фета, бальзамический уксус, сок лайма, <br> прованские травы, оливковое масло</td></tr>
                 <tr><td>С морепродуктами............................................200гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">(Мясо мидии, кольца кальмара, королевские креветки,<br> соус маракуйя, помидоры черри, салат айсберг)</td></tr>
+                <tr><td class="opis">Мясо мидии, кольца кальмара, королевские креветки,<br> соус маракуйя, помидоры черри, салат айсберг</td></tr>
             </table>
             <br>
             <table >
                 <caption>Пасты</caption>
                 <tr><td>Карбонара...........................................................300гр./<strong>320р.</strong></td></tr>
-                <tr><td class="opis">(Бекон, сливки, пармезан, помидоры черри)</td></tr>
+                <tr><td class="opis">Бекон, сливки, пармезан, помидоры черри</td></tr>
                 <tr><td>Болоньезе............................................................300гр./<strong>300р.</strong></td></tr>
                 <tr><td class="opis"></td></tr>
                 <tr><td>С курицей и грибами........................................300гр./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">(Куринное филе, лук, шампиньоны, сливки, сыр, базилик)</td></tr>
+                <tr><td class="opis">Куринное филе, лук, шампиньоны, сливки, сыр, базилик</td></tr>
                 <tr><td>С морепродуктами............................................300гр./<strong>400р.</strong></td></tr>
-                <tr><td class="opis">(Креветки королевские, мидии, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр)</td></tr>
+                <tr><td class="opis">Креветки королевские, мидии, кольца кальмара, чеснок,<br> сливки/томатный соус, сыр</td></tr>
             </table>
             <br>
             <table>
                 <caption>Супы</caption>
                 <tr><td>Том-Ям...............................................................300гр./<strong>400р.</strong></td></tr>
-                <tr><td class="opis">(Кольца кальмара, мидии в створках, королевские креветки,<br> морской гребешок, филе дорадо, лимонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи)</td></tr>
+                <tr><td class="opis">Кольца кальмара, мидии в створках, королевские креветки,<br> морской гребешок, филе дорадо, лимонграсс, корень имбиря,<br>чеснок, паста Том-ям, кокосовое молоко, соус кимчи</td></tr>
                 <tr><td>Грибной..............................................................300гр./<strong>280р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
                 <tr><td>Чечевичный.......................................................300гр./<strong>250р.</strong></td></tr>
@@ -106,7 +106,7 @@
                 <tr><td>Бефстрогонов с пюре......................................350гр./<strong>380р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
                 <tr><td>Название...........................................................250гр./<strong>350р.</strong></td></tr>
-                <tr><td class="opis">(Говяжья котлета, спаржа, бекон, брусничный соус)</td></tr>
+                <tr><td class="opis">Говяжья котлета, спаржа, бекон, брусничный соус</td></tr>
                 <tr><td>Дорадо на гриле.......................................................?гр./<strong>?р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
             </table>
@@ -116,9 +116,9 @@
                 <tr><td>Шампиньоны гриль.................................................?гр./<strong>?р.</strong></td></tr>
                 <tr><td class="opis">состав</td></tr>
                 <tr><td>Овощи гриль....................................................150гр./<strong>150р.</strong></td></tr>
-                <tr><td class="opis">(Кабачок, баклажан, цветная капуста, лук, <br>балгарский перец)</td></tr>
+                <tr><td class="opis">Кабачок, баклажан, цветная капуста, лук, <br>балгарский перец</td></tr>
                 <tr><td>Рис с овощами................................................150гр./<strong>100р.</strong></td></tr>
-                <tr><td class="opis">(Рис, цукини, болгарский перец, лук)</td></tr>
+                <tr><td class="opis">Рис, цукини, болгарский перец, лук</td></tr>
             </table>
             <br>
             <h2>Карта бара</h2>
@@ -126,56 +126,56 @@
             <table>
                 <caption>Коктейли</caption>
                 <tr><td>Глюкоза............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Спрайт, лимон, лайм, лимонныйы сок, грейп сок,<br> сироп блюкюрасао, лед)</td></tr>
+                <tr><td class="opis">Спрайт, лимон, лайм, лимонныйы сок, грейп сок,<br> сироп блюкюрасао, лед</td></tr>
                 <tr><td>Аскорбинка......................................................250мл./<strong>170р.</strong></td></tr>
-                <tr><td class="opis">(Клюквенный сок, ананс сок, лед, мята, сироп)</td></tr>
+                <tr><td class="opis">Клюквенный сок, ананс сок, лед, мята, сироп</td></tr>
                 <tr><td>Фруктоза..........................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Персик сок, апельсин фреш, сок лайма, мед, лед)</td></tr>
+                <tr><td class="opis">Персик сок, апельсин фреш, сок лайма, мед, лед</td></tr>
                 <tr><td>Ранасмурфин...................................................250мл./<strong>180р.</strong></td></tr>
-                <tr><td class="opis">(Сироп лаванда, сок лайма, содовая, <br>сушенная лаванда, лед)</td></tr>
+                <tr><td class="opis">Сироп лаванда, сок лайма, содовая, <br>сушенная лаванда, лед</td></tr>
                 <tr><td>Кальциум.........................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Апельсиновый сок, сироп маракуя, содовая,<br>сок лайма, сок лимона, апельсин, мята, лед)</td></tr>
+                <tr><td class="opis">Апельсиновый сок, сироп маракуя, содовая,<br>сок лайма, сок лимона, апельсин, мята, лед</td></tr>
                 <tr><td>Каогуляция.......................................................250мл/<strong>300р.</strong></td></tr>
-                <tr><td class="opis">(Сироп клубника, апельсиновый сок, <br>ананасовый сок, кофе эспрессо)</td></tr>
+                <tr><td class="opis">Сироп клубника, апельсиновый сок, <br>ананасовый сок, кофе эспрессо</td></tr>
                 <tr><td>Феррум..............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Виноградный сок, сироп сахар, лайм, содовая, лед)</td></tr>
+                <tr><td class="opis">Виноградный сок, сироп сахар, лайм, содовая, лед</td></tr>
                 <tr><td>Витамин А.......................................................250мл./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">(Апельсиновый сок, мороженное, вишневый сок,<br>содовая, лед)</td></tr>
+                <tr><td class="opis">Апельсиновый сок, мороженное, вишневый сок,<br>содовая, лед</td></tr>
                 <tr><td>Витамин С.......................................................250мл./<strong>300р.</strong></td></tr>
-                <tr><td class="opis">(Сироп малина, мороженное, грейп сок, <br>взбитые сливки, содовая)</td></tr>
+                <tr><td class="opis">Сироп малина, мороженное, грейп сок, <br>взбитые сливки, содовая</td></tr>
                 <tr><td>Фолиевая кислота........................................250мл./<strong>200р.</strong></td></tr>
-                <tr><td class="opis">(Спрайт, лайм, мята, сироп сахар, лед)</td></tr>
+                <tr><td class="opis">Спрайт, лайм, мята, сироп сахар, лед</td></tr>
                 
             </table>
             <br>
             <table>
                 <caption>Смузи</caption>
                 <tr><td>Иммунитет.......................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Анансовый сок, апельсиновый сок, клубника,<br>ежевика, малина, черника, мята, сок лимона,<br>сироп гранат)</td></tr>
+                <tr><td class="opis">Анансовый сок, апельсиновый сок, клубника,<br>ежевика, малина, черника, мята, сок лимона,<br>сироп гранат</td></tr>
                 <tr><td>Марганец.........................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Яблочный сок, клубника, банан, лед)</td></tr>
+                <tr><td class="opis">Яблочный сок, клубника, банан, лед</td></tr>
                 <tr><td>Вульфенит.......................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Грейпфрут, мята, мед, лед)</td></tr>
+                <tr><td class="opis">Грейпфрут, мята, мед, лед</td></tr>
                 <tr><td>Малахит...........................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Персиковый сок, киви, сахар пудра, корица)</td></tr>
+                <tr><td class="opis">Персиковый сок, киви, сахар пудра, корица</td></tr>
                 <tr><td >Александрид..................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Малина, груша, яблоко, молоко, мед)</td></tr>
+                <tr><td class="opis">Малина, груша, яблоко, молоко, мед</td></tr>
             </table>
             <br>
             <table>
                 <caption>Милкшейки</caption>
                 <tr><td>Вольфрам.......................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Мороженное, молоко, печенье, смородина, <br> сахар сироп, какао мята, корица палочкой,<br>взбитые сливки)</td></tr>
+                <tr><td class="opis">Мороженное, молоко, печенье, смородина, <br> сахар сироп, какао мята, корица палочкой,<br>взбитые сливки</td></tr>
                 <tr><td>Калий...............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Мороженное, молоко, сироп блюкюрасао, <br>сироп гранат, банан, малина, мармелад,<br>взбитые сливки)</td></tr>
+                <tr><td class="opis">Мороженное, молоко, сироп блюкюрасао, <br>сироп гранат, банан, малина, мармелад,<br>взбитые сливки</td></tr>
                 <tr><td>Бром.................................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Клубника, молоко, банан, сироп малина)</td></tr>
+                <tr><td class="opis">Клубника, молоко, банан, сироп малина</td></tr>
                 <tr><td>Цирконий.......................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Молоко, мороженное, сироп карамель, киви, банан)</td></tr>
+                <tr><td class="opis">Молоко, мороженное, сироп карамель, киви, банан</td></tr>
                 <tr><td>Олово...............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Мороженное, молоко, орех сироп, орео, какао)</td></tr>
+                <tr><td class="opis">Мороженное, молоко, орех сироп, орео, какао</td></tr>
                 <tr><td>Родий...............................................................250мл./<strong>250р.</strong></td></tr>
-                <tr><td class="opis">(Мороженное, молоко, ежевика, взбитые сливки)</td></tr>
+                <tr><td class="opis">Мороженное, молоко, ежевика, взбитые сливки</td></tr>
             </table>
         </main>
     </body>
