--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1><a class="yellow">CHEMISTRY</a></h1>
             <h1>Lounge Bar</h1>
-            <img src="img/logo.jpg">
+            <img src="img/logo-removebg-preview.png">
         </header>
         <main>
             <table class="zakus">
